assets/css/main3.css
/* default */
html * {
    font-family: 'Montserrat', serif;
}

/* If the browser window is smaller than 600px, make the columns stack on top of each other */
html {
    font-size: 20px;
}

.window {
    /* background: #d3fcff; */
    background: black;
    margin: 0px;
    width: 100%;
}

.window-partition {
    background: #d3fcff;
}

div#window-left {
    background: black;
    color: white;
    margin: 0px;
}

div#window-right {
    /* background: lightcyan; */
    background: #d3fcff;
}

.main-content {
    padding: 20px;
    padding-left: 10%;
    padding-right: 10%;
}

.post-content a:link, .post-content a:visited {
    color: rgb(0, 0, 255);
    text-decoration: none;
}

/* header */
.header-content {
    /* padding: 10px; */
    padding-left: 10px;
    padding-right: 10px;
}

span.site-title {
    display: block;
    font-size: 1.5em;
    margin-block-start: 0.83em;
    margin-block-end: 0.83em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}

span.site-title a {
    display: inline;
    color: white;
    text-decoration: none;
    /* text-align: center; doesn't work as h2 is a block element */
    /* font-size: 1.5em;
    font-weight: bolder; */
    position: absolute;
    top: 22px;
    left: 50%;
    transform: translateX(-50%);
}

.header-content a.burger-icon {
    display: block;
    padding: 8px 10px;
    background: black;
    color: #d3fcff;
    position: absolute;
    top: 10px;
    right: 6%;
}

.header-content a:active.burger-icon {
    background-color: #d3fcff;
    color: black;
}

.header-content a i {
    /* height: 100px;
    width: 100px; */
    font-size: 40px;
}

.profile-pic {
    display: inline-block;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    object-fit: cover;
    object-position: 0% 0%;
    position: relative;
    top: -10px;
    left: 5%;
    /* top: 22px;
    left: 50%;
    transform: translateX(-50%); */
}

.site-description {
    display: none;
}

#social-links {
    display: none;
    /* position: absolute;
    bottom: 10px;
    left: 5%;
    width: 90%; */
    text-align: center;
    letter-spacing: 0.5em;
}

a.social-icons i {
    font-size: 40px;
}

#header-tabs {
    display: none;
    padding-top: 1px;
    padding-left: 12%;
    position: relative;
    top: -35px;
    font-size: 1.25em;
    text-align: right;
}

div#header-tabs p {
    /* width: 260px; */
    /* min-width: 100px; */
    position: relative;
    right: 5%;
    /* transform: translateX(-50%); */
}

#header-tabs a:link, #header-tabs a:visited {
    /* color: black; */
    color: white;
    text-decoration: none;
    /* background-color: blue;
    color: white;
    padding: 14px 25px;
    text-align: center;
    text-decoration: none;
    display: inline-block; */
}

/* .header-tabs a:hover, a:active {
    background-color: red;
} */

/* home */
a:visited.post-link, a:link.post-link {
    color: blue;
    text-decoration: none;
}

/* post */
.post-meta {
    font-size: 12px;
    font-style: italic;
}

.dt-published, .dt-modified {
    color: rgb(167, 164, 164);
}

.p-author h-card {
    color: rgb(90, 90, 90);
}



@media only screen and (min-width: 1000px) {
    html {
        font-size: 17px;
    }

    .window {
        display: table;
        width: 100%;
        margin: 0px;
        /* background: lightcyan; /* this is for debugging */
        background: #d3fcff;
    }

    .window .window-partition {
        display: table-cell;
        margin: 0px;
        /* padding: 0px; */
        /* background: lightcyan; /* this is for debugging */
        background: #d3fcff;
    }

    div#window-left {
        /* position: fixed; */
        width: 25%;
        height: 100%;
        overflow: auto;
        margin: 0px;
        /* padding: 0px; */
        background: black;
        color: white;
        /* transition: 0.05s; */
    }

    div#window-right {
        position: relative;
        /* left: 25%; */
        width: 75%;
        /* background: lightcyan; */
        background: #d3fcff;
    }

    .main-content {
        padding: 20px;
        padding-left: 10%;
        padding-right: 10%;
    }

    .post-content a:link, .post-content a:visited {
        color: rgb(0, 0, 255);
        text-decoration: none;
    }

    /* header */
    .header-content {
        position: relative;
        top: -40px;
        text-align: center;
        padding-left: 10px;
        padding-right: 10px;
    }

    span.site-title {
        display: block;
        font-size: 1.5em;
        margin-block-start: 0.5em;
        margin-block-end: 0em;
        margin-inline-start: 0px;
        margin-inline-end: 0px;
        font-weight: bold;
    }

    span.site-title a {
        display: inline;
        color: white;
        text-decoration: none;
        /* text-align: center; doesn't work as h2 is a block element */
        position: static;
    }

    div.header-content a.burger-icon {
        display: block;
        padding: 8px 10px;
        background: black;
        color: #d3fcff;
        width: 35px;
        position: relative;
        top: 10px;
        left: 2px;
        right: unset;
        /* z-index: 1; */
    }
    
    .header-content a:active.burger-icon {
        background-color: #d3fcff;
        color: black;
    }
    
    .header-content a i {
        /* height: 100px;
        width: 100px; */
        font-size: 150%;
    }

    img.profile-pic {
        display: inline-block;
        text-align: center;
        margin-top: 10px;
        height: 220px;
        width: 220px;
        border-radius: 50%;
        object-fit: cover;
        object-position: 0% 0%;
        position: static;
    }

    div.profile-info {
        display: inline;
    }
    
    .site-description {
        display: block;
        margin-top: 0.3em;
        text-align: center;
    }
    
    #social-links {
        display: inline;
        position: static;
        text-align: center;
        letter-spacing: 0.4em;
    }

    a.social-icons i{
        font-size: 120%;
    }

    #header-tabs {
        display: inline;
        position: relative;
        top: -35px;
        text-align: left;
        font-size: 1.25em;
    }

    div#header-tabs p {
        margin: 12px;
        padding-left: 20px;
        text-align: left;
    }
    
    div#header-tabs p a i {
        font-size: 100%;
    }

    div#header-tabs p a span {
        position: relative;
        left: 10px;
    }

    #header-tabs a:link, #header-tabs a:visited {
        /* color: black; */
        color: white;
        text-decoration: none;
        /* background-color: blue;
        color: white;
        padding: 14px 25px;
        text-align: center;
        text-decoration: none;
        display: inline-block; */
    }

    /* .header-tabs a:hover, a:active {
        background-color: red;
    } */

    span.header-tab-text {
        display: inline;
    }

    /* home */
    a:visited.post-link, a:link.post-link {
        color: blue;
        text-decoration: none;
    }

    /* post */
    .post-meta {
        font-size: 12px;
        font-style: italic;
    }

    .dt-published, .dt-modified {
        color: rgb(167, 164, 164);
    }

    .p-author h-card {
        color: rgb(90, 90, 90);
    }

}

